Fix error types in swagger doc
