# docs/swagger.json
@@ -36,13 +36,19 @@
                         }
                     },
                     "400": {
-                        "description": ""
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ValidationErrorStruct"
+                        }
                     },
                     "404": {
                         "description": ""
                     },
                     "500": {
-                        "description": ""
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.JSONErrorStruct"
+                        }
                     }
                 }
             }
@@ -74,7 +80,10 @@
                         "description": ""
                     },
                     "500": {
-                        "description": ""
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.JSONErrorStruct"
+                        }
                     }
                 }
             }
@@ -112,10 +121,16 @@
                         "description": ""
                     },
                     "404": {
-                        "description": ""
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.JSONErrorStruct"
+                        }
                     },
                     "500": {
-                        "description": ""
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.JSONErrorStruct"
+                        }
                     }
                 }
             },
@@ -154,13 +169,22 @@
                         }
                     },
                     "400": {
-                        "description": ""
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ValidationErrorStruct"
+                        }
                     },
                     "404": {
-                        "description": ""
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.JSONErrorStruct"
+                        }
                     },
                     "500": {
-                        "description": ""
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.JSONErrorStruct"
+                        }
                     }
                 }
             }
@@ -237,6 +261,39 @@
                     "type": "string"
                 },
                 "sender": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.JSONErrorStruct": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.ValidationErrorStruct": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "fields": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/utils.ValidationField"
+                    }
+                }
+            }
+        },
+        "utils.ValidationField": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
